  * package/TODO: remove.
  * package/README,COPYING: Copyright date.
  * chpst.c: fix compilation warning(s): -Wunsequenced (thx Dmitry
    Bogatov, Z. Liu).
  * svlogd.c: Initialize all fields of sockaddr_in (thx Érico Rolim).
  * sv.c: add sleep_microseconds to encapsulate (u|nano)sleep (thx Z.
    Liu).
  * chpst.c, chpst.dist, man/chpst.8: add options -t and -V to chpst man
    page and usage (thx Lorenzo Puliti, Z. Liu).
  * man/runsv.8: log service's ./finish script is actually not invoked
    (thx Jamie Heilman, Dmitry Bogatov, Z. Liu).
  * man/runsv.8: clarify how signal override works with control/d and x
    (thx Andras Korn, Lorenzo Puliti, Z. Liu).
  * runit.c, runit.h, man/runit.8: support /etc/runit/nosync file to make
    sync on shutdown/reboot optional (thx Andras Korn).
  * prot.c, prot.h, chkshsgr.c, tryshsgr.c: remove; obsolete.
  * Makefile, TARGETS: no longer check for "shortsetgroups" (thx Leah
    Neukirchen).
  * chpst.c: replace prot_uid() with setuid().
  * utmpset.c: don't pass int32_t to time() (thx Lorenzo Beretta).
  * chpst.c, pathexec.h, pathexec_env.c, pathexec_run.c, runsvdir.c,
    sgetopt.c, sgetopt.h, subgetopt.c, subgetopt.h, sv.c, svlogd.c,
    utmpset.c: fix compilation warning(s): -Wincompatible-pointer-types-
    discards-qualifiers (thx Z. Liu, Debian, and others).
  * x86cpuid.c: fix error: call to undeclared library function '...'; ISO
    C99 and later do not support implicit function declarations
    [-Wimplicit-function-declaration] (thx Z. Liu, Debian, and others).
  * chpst.c, pathexec_run.c, prot.c, seek_set.c: fix error: call to
    undeclared function '...'; ISO C99 and later do not support implicit
    function declarations [-Wimplicit-function-declaration] (thx Z. Liu).
  * tryflock.c, trysgact.c, trysgprm.c, trywaitp.c: fix error: type
    specifier missing, defaults to 'int'; ISO C99 and later do not support
    implicit int [-Wimplicit-int] (thx Z. Liu and others).