@@ -43,7 +43,7 @@ hierarchy, do:
 </pre>
 To report success:
 <pre>
- # mail pape-runit-2.1.2@smarden.org &lt;compile/sysdeps
+ # mail pape-runit-2.1.2@xxiv.smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>runit</i> regularly, please
 <a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
